# rsbids-benchmark

./: README.md  benchmarks.ipynb  pyproject.toml  submit.sh
.benchmarks/Linux-CPython-3.10-64bit/: 0001_metadata.json  0002_query.json  0003_large_query.json  0004_indexing.json
.benchmarks/Linux-CPython-3.11-64bit/: 0001_query.json  0002_large_query.json  0003_indexing.json  0004_metadata.json
tests/: test_benchmark.py
